feat: seeding db with exercises

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,13 +13,16 @@
 		"db:push": "drizzle-kit push",
 		"db:generate": "drizzle-kit generate",
 		"db:studio": "drizzle-kit studio",
-		"db:migrate": "drizzle-kit migrate"
+		"db:migrate": "drizzle-kit migrate",
+		"db:seed": "tsx ./src/seed.ts"
 	},
 	"dependencies": {
-		"@stronk/env": "workspace:*",
 		"@neondatabase/serverless": "^1.0.2",
+		"@stronk/env": "workspace:*",
 		"dotenv": "catalog:",
 		"drizzle-orm": "^0.45.1",
+		"drizzle-seed": "^0.3.1",
+		"drizzle-zod": "^0.8.3",
 		"ws": "^8.18.3",
 		"zod": "catalog:"
 	},
@@ -27,6 +30,7 @@
 		"@stronk/config": "workspace:*",
 		"@types/ws": "^8.18.1",
 		"drizzle-kit": "^0.31.8",
+		"tsx": "^4.21.0",
 		"typescript": "catalog:"
 	}
 }
