feat: api for routines and exercises

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@base/config/tsconfig.base.json",
+	"extends": "@stronk/config/tsconfig.base.json",
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "dist",
