--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,16 +11,18 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.0.0",
-		"@stronk/api": "workspace:*",
-		"@stronk/auth": "workspace:*",
-		"@stronk/env": "workspace:*",
 		"@hookform/resolvers": "^5.2.2",
 		"@orpc/client": "catalog:",
 		"@orpc/server": "catalog:",
 		"@orpc/tanstack-query": "catalog:",
+		"@stronk/api": "workspace:*",
+		"@stronk/auth": "workspace:*",
+		"@stronk/env": "workspace:*",
 		"@tabler/icons-react": "^3.36.1",
 		"@tailwindcss/vite": "^4.0.15",
+		"@tanstack/pacer": "^0.17.2",
 		"@tanstack/react-form": "^1.12.3",
+		"@tanstack/react-pacer": "^0.19.2",
 		"@tanstack/react-query": "catalog:",
 		"@tanstack/react-router": "^1.141.1",
 		"better-auth": "catalog:",
@@ -32,6 +34,7 @@
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"react-hook-form": "^7.70.0",
+		"react-intersection-observer": "^10.0.0",
 		"shadcn": "^3.6.2",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
