--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,9 @@
 		".": {
 			"default": "./src/index.ts"
 		},
+		"./types": {
+			"default": "./src/types/index.ts"
+		},
 		"./*": {
 			"default": "./src/*.ts"
 		}
